// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toolbar > renders outlined action buttons 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
        <span
          class="flex_f16jawj4"
          title="test display name2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-332 chevron_fin4unf"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path2"
          >
            test display name2
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          class=""
          title="Back"
        >
           
          <button
            class="MuiButtonBase-root-355 MuiIconButton-root-349 backLink_fxaclcu"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-354"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-332 backIcon_f116wd06 enabled_fep5z4h"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-384"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        />
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        class=""
        title="test outlined tooltip"
      >
        <button
          class="MuiButtonBase-root-355 MuiButton-root-358 MuiButton-text-360 MuiButton-textPrimary-361 MuiButton-flat-363 MuiButton-flatPrimary-364 root_f1gmzqw4"
          id="test outlined id"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-359"
          >
            <span>
              test outlined title
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-384"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders primary action buttons 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
        <span
          class="flex_f16jawj4"
          title="test display name2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-391 chevron_fin4unf"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path2"
          >
            test display name2
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          class=""
          title="Back"
        >
           
          <button
            class="MuiButtonBase-root-414 MuiIconButton-root-408 backLink_fxaclcu"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-413"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-391 backIcon_f116wd06 enabled_fep5z4h"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-443"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        />
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        class=""
        title="test primary tooltip"
      >
        <button
          class="MuiButtonBase-root-414 MuiButton-root-417 MuiButton-text-419 MuiButton-textSecondary-421 MuiButton-flat-422 MuiButton-flatSecondary-424 root_f1gmzqw4 buttonAction_f1olq6uy"
          id="test primary id"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-418"
          >
            <span>
              test primary title
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-443"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders primary action buttons without outline, even if outline is true 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
        <span
          class="flex_f16jawj4"
          title="test display name2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-450 chevron_fin4unf"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path2"
          >
            test display name2
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          class=""
          title="Back"
        >
           
          <button
            class="MuiButtonBase-root-473 MuiIconButton-root-467 backLink_fxaclcu"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-472"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-450 backIcon_f116wd06 enabled_fep5z4h"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-502"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        />
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        class=""
        title="test tooltip"
      >
        <button
          class="MuiButtonBase-root-473 MuiButton-root-476 MuiButton-text-478 MuiButton-textSecondary-480 MuiButton-flat-481 MuiButton-flatSecondary-483 root_f1gmzqw4 buttonAction_f1olq6uy"
          id="test id"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-477"
          >
            <span>
              test title
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-502"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders with two breadcrumbs and two actions 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
        <span
          class="flex_f16jawj4"
          title="test display name2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-509 chevron_fin4unf"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path2"
          >
            test display name2
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          class=""
          title="Back"
        >
           
          <button
            class="MuiButtonBase-root-532 MuiIconButton-root-526 backLink_fxaclcu"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-531"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-509 backIcon_f116wd06 enabled_fep5z4h"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-561"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        />
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        class=""
        title="test tooltip"
      >
        <button
          class="MuiButtonBase-root-532 MuiButton-root-535 MuiButton-text-537 MuiButton-textSecondary-539 MuiButton-flat-540 MuiButton-flatSecondary-542 root_f1gmzqw4"
          id="test id"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-536"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-509 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
              />
            </svg>
            <span>
              test title
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-561"
          />
        </button>
      </div>
      <div
        class=""
        title="test disabled title2"
      >
        <button
          class="MuiButtonBase-root-532 MuiButtonBase-disabled-533 MuiButton-root-535 MuiButton-text-537 MuiButton-textSecondary-539 MuiButton-flat-540 MuiButton-flatSecondary-542 MuiButton-disabled-555 root_f1gmzqw4"
          disabled=""
          id="test id2"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-536"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-509 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <span>
              test title2
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without actions and one breadcrumb 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          class=""
          title="Back"
        >
           
          <button
            class="MuiButtonBase-root-174 MuiIconButton-root-168 backLink_fxaclcu"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-173"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-177 backIcon_f116wd06 enabled_fep5z4h"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-186"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    />
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without actions, one breadcrumb, and a page name 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          class=""
          title="Back"
        >
           
          <button
            class="MuiButtonBase-root-207 MuiIconButton-root-201 backLink_fxaclcu"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-206"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-210 backIcon_f116wd06 enabled_fep5z4h"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-219"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    />
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without breadcrumbs and a component page title 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      />
      <div
        class="flex_f16jawj4"
      >
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          <div
            id="myComponent"
          >
            test page title
          </div>
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        class=""
        title="test tooltip"
      >
        <button
          class="MuiButtonBase-root-88 MuiButton-root-62 MuiButton-text-64 MuiButton-textSecondary-66 MuiButton-flat-67 MuiButton-flatSecondary-69 root_f1gmzqw4"
          id="test id"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-63"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-91 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
              />
            </svg>
            <span>
              test title
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-100"
          />
        </button>
      </div>
      <div
        class=""
        title="test disabled title2"
      >
        <button
          class="MuiButtonBase-root-88 MuiButtonBase-disabled-89 MuiButton-root-62 MuiButton-text-64 MuiButton-textSecondary-66 MuiButton-flat-67 MuiButton-flatSecondary-69 MuiButton-disabled-82 root_f1gmzqw4"
          disabled=""
          id="test id2"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-63"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-91 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <span>
              test title2
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without breadcrumbs and a string page title 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      />
      <div
        class="flex_f16jawj4"
      >
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        class=""
        title="test tooltip"
      >
        <button
          class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-textSecondary-13 MuiButton-flat-14 MuiButton-flatSecondary-16 root_f1gmzqw4"
          id="test id"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-10"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-38 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
              />
            </svg>
            <span>
              test title
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-47"
          />
        </button>
      </div>
      <div
        class=""
        title="test disabled title2"
      >
        <button
          class="MuiButtonBase-root-35 MuiButtonBase-disabled-36 MuiButton-root-9 MuiButton-text-11 MuiButton-textSecondary-13 MuiButton-flat-14 MuiButton-flatSecondary-16 MuiButton-disabled-29 root_f1gmzqw4"
          disabled=""
          id="test id2"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-10"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-38 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <span>
              test title2
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without breadcrumbs and one action 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      />
      <div
        class="flex_f16jawj4"
      >
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        class=""
        title="test tooltip"
      >
        <button
          class="MuiButtonBase-root-141 MuiButton-root-115 MuiButton-text-117 MuiButton-textSecondary-119 MuiButton-flat-120 MuiButton-flatSecondary-122 root_f1gmzqw4"
          id="test id"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-116"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-144 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
              />
            </svg>
            <span>
              test title
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-153"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without breadcrumbs and two actions 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      />
      <div
        class="flex_f16jawj4"
      >
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        class=""
        title="test tooltip"
      >
        <button
          class="MuiButtonBase-root-260 MuiButton-root-234 MuiButton-text-236 MuiButton-textSecondary-238 MuiButton-flat-239 MuiButton-flatSecondary-241 root_f1gmzqw4"
          id="test id"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-235"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-263 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
              />
            </svg>
            <span>
              test title
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-272"
          />
        </button>
      </div>
      <div
        class=""
        title="test disabled title2"
      >
        <button
          class="MuiButtonBase-root-260 MuiButtonBase-disabled-261 MuiButton-root-234 MuiButton-text-236 MuiButton-textSecondary-238 MuiButton-flat-239 MuiButton-flatSecondary-241 MuiButton-disabled-254 root_f1gmzqw4"
          disabled=""
          id="test id2"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-235"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-263 icon_f1ojihnt"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <span>
              test title2
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
